--- a/Feature_Selection/Best_Accuracy_Feature_Selection - Outliers Removed.ipynb
+++ b/Feature_Selection/Best_Accuracy_Feature_Selection - Outliers Removed.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Machine Learning"
+    "#### **This Performs Forward Sequential Feature selection on the PageRank filtered model, tuned for Accuracy**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The PageRank cutoff, cleaning parameters and model hyperparameters were all found through *Optuna*."
    ]
   },
   {
@@ -39,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filter the least central spectra"
+    "Filter the least central spectra from each surface."
    ]
   },
   {
@@ -733,7 +740,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### **Greedy Feature Selection**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Choose the combination of features that most increases accuracy"
    ]
   },
   {
@@ -2139,7 +2160,7 @@
     "y = wavelength_df['Status']\n",
     "\n",
     "# Using GroupKFold for classification tasks\n",
-    "cv = GroupKFold(n_splits=5)\n",
+    "cv = GroupKFold(n_splits=10)\n",
     "\n",
     "# Feature selector\n",
     "sfs = SequentialFeatureSelector(et,\n",
