--- a/Feature_Selection/Best_F1_Feature_Selection - Outliers Removed.ipynb
+++ b/Feature_Selection/Best_F1_Feature_Selection - Outliers Removed.ipynb
@@ -4,20 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Machine Learning"
+    "#### **This Performs Forward Sequential Feature selection on the PageRank filtered model, tuned for F1 Score**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, precision_score, recall_score, f1_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_val_score\n",
+    "from sklearn.model_selection import GroupKFold\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,6 +24,13 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "from Cleaning_and_Evaluation import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The PageRank cutoff, cleaning parameters and model hyperparameters were all found through *Optuna*."
    ]
   },
   {
@@ -918,6 +924,13 @@
    ],
    "source": [
     "evaluate_model(wavelength_df, rf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
