--- a/Feature_Selection/Feature_Importance_Selection.ipynb
+++ b/Feature_Selection/Feature_Importance_Selection.ipynb
@@ -19,7 +19,10 @@
     "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_val_score\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Cleaning_and_Evaluation import *"
    ]
   },
   {
