Finished refactoring Feature Selection

--- a/Feature_Selection/Dimensionality_Reduction_Test.ipynb
+++ b/Feature_Selection/Dimensionality_Reduction_Test.ipynb
@@ -779,7 +779,15 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC Cross-Validation Accuracy with PCA and LDA: 0.5111 +/- 0.0877\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the Surfaces as groups\n",
     "groups = wavelength_df['SurID']\n",
