--- a/Logical_Graphs/Biomarker_Peak_Range_Graph_GroupKFold.ipynb
+++ b/Logical_Graphs/Biomarker_Peak_Range_Graph_GroupKFold.ipynb
@@ -2571,7 +2571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Machine Learning Using Graph Metrics"
+    "## Machine Learning Using Graph Metrics GroupKFold"
    ]
   },
   {
