--- a/Logical_Graphs/Biomarker_Peak_Range_Graph_KFold.ipynb
+++ b/Logical_Graphs/Biomarker_Peak_Range_Graph_KFold.ipynb
@@ -2572,7 +2572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Machine Learning Using Graph Metrics"
+    "## Machine Learning Using Graph Metrics KFold"
    ]
   },
   {
