Refactored Parameter Searches

--- a/Parameter_Searches/Cleaning_and_Hyperparmeter_Search.ipynb
+++ b/Parameter_Searches/Cleaning_and_Hyperparmeter_Search.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **This Notebook Performs a Parameters Search on Every Possible Cleaning and Model Parameter.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets test different spectral cleaning parameters by building a model pipeline."
+    "### **This Notebook Performs a Bayesian Parameter Search to find the best Cleaning and Model Parameters.**"
    ]
   },
   {
@@ -27,6 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Cleaning_and_Evaluation import *\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.signal import savgol_filter\n",
@@ -34,7 +30,6 @@
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import cross_validate, GroupKFold\n",
-    "from Spectra_Preparation_Functions import *\n",
     "import optuna"
    ]
   },
@@ -470,7 +465,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">#### **Use Optuna to Find the Best Cleaning Parameter**"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">#### **Use Optuna to Find the Best Cleaning and Model Parameters**"
    ]
   },
   {
@@ -636,6 +638,13 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The objective function outlines the parameters search."
    ]
   },
   {
