--- a/Parameter_Searches/F1_Score_Cleaning_and_Hyperparmeter_Search.ipynb
+++ b/Parameter_Searches/F1_Score_Cleaning_and_Hyperparmeter_Search.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **This Notebook Performs a Parameters Search on Every Possible Cleaning and Model Parameter.**"
+    "### **This Notebook Performs a Bayesian Parameter Search to find the best Cleaning and Model Parameters.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets test different spectral cleaning parameters by building a model pipeline."
+    "This version optimises the parameters to maximise **F1-Score**."
    ]
   },
   {
@@ -27,6 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Cleaning_and_Evaluation import *\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.signal import savgol_filter\n",
@@ -34,7 +37,6 @@
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import cross_validate, GroupKFold\n",
-    "from Spectra_Preparation_Functions import *\n",
     "import optuna"
    ]
   },
@@ -464,6 +466,13 @@
    "source": [
     "wavelength_df = prepare_wavelength_df(df, 'Absorbance')\n",
     "wavelength_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
