--- a/Parameter_Searches/GroupKFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
+++ b/Parameter_Searches/GroupKFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
@@ -43,7 +43,9 @@
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.model_selection import cross_validate, GroupKFold\n",
     "from joblib import Parallel, delayed\n",
-    "from Spectra_Preparation_Functions import *\n"
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Cleaning_and_Evaluation import *"
    ]
   },
   {
