--- a/Parameter_Searches/GroupKFold_Peak_Parameter_Search.ipynb
+++ b/Parameter_Searches/GroupKFold_Peak_Parameter_Search.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Use Grid Search to Find the most Informative Peaks**"
+    "### **This Aims to Iteratively find the Best Cleaning Parameters based on GroupKFold Accuracy**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **This version performas grid search in parralel so may require better hardware.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\*This was eventually superceded by the Optuna searches, so that a wider set of parameters could be tested.\\*"
    ]
   },
   {
@@ -27,8 +41,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from scipy.signal import peak_widths, peak_prominences\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_validate\n",
+    "from sklearn.model_selection import GroupKFold, cross_validate\n",
     "from joblib import Parallel, delayed\n",
     "from sklearn.metrics import accuracy_score"
    ]
@@ -221,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **1 Sample Examples**"
+    "#### **1 Sample Visualisation**"
    ]
   },
   {
@@ -375,6 +388,13 @@
    "source": [
     "sns.lineplot(x=\"WaveNumber\", y=\"Absorbance\", data=sample)\n",
     "sns.scatterplot(data=sample.iloc[tuned_peaks], x=\"WaveNumber\", y=\"Absorbance\", color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
