--- a/Parameter_Searches/KFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
+++ b/Parameter_Searches/KFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **This aims to classify the exosome staus based on a featureset derrived from the peaks.**"
+    "### **This Aims to Iteratively find the Best Cleaning Parameters based on KFold Accuracy**"
    ]
   },
   {
@@ -12,6 +12,13 @@
    "metadata": {},
    "source": [
     "#### **This version performas grid search in parralel so may require better hardware.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\*This was eventually superceded by the Optuna searches, so that a wider set of parameters could be tested.\\*"
    ]
   },
   {
@@ -40,7 +47,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold, cross_validate\n",
+    "from sklearn.model_selection import KFold, cross_validate\n",
     "from joblib import Parallel, delayed"
    ]
   },
