--- a/Final_Results/kfold_evaluation.ipynb
+++ b/Final_Results/kfold_evaluation.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "These parameters are used to compare the full wavelength with the peak featuresets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Import Libraries"
    ]
   },
