--- a/GroupKFold_Baseline_Apporach/Leave_Replicate_Out_CV.ipynb
+++ b/GroupKFold_Baseline_Apporach/Leave_Replicate_Out_CV.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This Notebook Evaluates Replicate Out Cross-Validation to Better Measure how the model generalises"
+    "### **This Notebook Evaluates Replicate Out Cross-Validation to Better Measure how the model generalises**"
    ]
   },
   {
@@ -32,14 +32,9 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
-    "from scipy.signal import savgol_filter\n",
-    "from scipy import sparse\n",
-    "from scipy.sparse.linalg import spsolve\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold\n",
     "from sklearn.model_selection import LeavePGroupsOut"
    ]
   },
