--- a/GroupKFold_Baseline_Apporach/Move to archive/Extra_Performance_Metrics.ipynb
+++ b/GroupKFold_Baseline_Apporach/Move to archive/Extra_Performance_Metrics.ipynb
@@ -20,6 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Cleaning_and_Evaluation import *\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.signal import savgol_filter\n",
@@ -41,8 +44,7 @@
    "outputs": [],
    "source": [
     "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "df = pd.read_csv(\"../../data/raw_df_outliers_removed.csv\")"
+    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")"
    ]
   },
   {
