--- a/Final_Results/Optuna_Cleaning(F1).ipynb
+++ b/Final_Results/Optuna_Cleaning(F1).ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The parameters were found by Optuna, optimsing for Group 10-Fold Accuracy"
+    "The parameters were found by Optuna, optimsing for Group 10-Fold F1-Score"
    ]
   },
   {
@@ -237,15 +237,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optuna Outlier Parameters\n",
-    "despike_ma = 19\n",
-    "despike_threshold = 5.75\n",
-    "lam = 10 ** 10\n",
-    "p = 0.049\n",
-    "\n",
-    "# The search found that smoothing was harming performance\n",
-    "# window_size = 51\n",
-    "# poly_order = 3"
+    "lam = 10 ** 9\n",
+    "p = 0.046\n",
+    "window_size = 51\n",
+    "poly_order = 3"
    ]
   },
   {
