--- a/GroupKFold_Baseline_Apporach/GroupKFold_Feature_Importance.ipynb
+++ b/GroupKFold_Baseline_Apporach/GroupKFold_Feature_Importance.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Machine Learning"
+    "#### **This Notebook Visualises Regions of the Spectra, based on how Important they are to the Models**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This version uses GroupKFold instead."
    ]
   },
   {
@@ -15,8 +22,7 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, precision_score, recall_score, f1_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_val_score\n",
+    "from sklearn.model_selection import GroupKFold, cross_val_score\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
