--- a/GroupKFold_Baseline_Approach/Extra_Trees_and_Spectra_Cleaning_Demonstration.ipynb
+++ b/GroupKFold_Baseline_Approach/Extra_Trees_and_Spectra_Cleaning_Demonstration.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "Note: In this notebook the functions are defined, just to give a better explanation for their actions.\n",
     "\n",
-    "The other ML notebooks use the call the functions from the Spectra_Preparation_Functions.py file."
+    "The other ML notebooks use import the functions from the `Cleaning_and_Evaluation` package."
    ]
   },
   {
@@ -1319,8 +1319,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://towardsdatascience.com/data-science-for-raman-spectroscopy-a-practical-example-e81c56cf25f\n",
-    "\n",
     "def modified_z_score(ys):\n",
     "    ysb = np.diff(ys) # Differentiated intensity values\n",
     "    median_y = np.median(ysb) # Median of the intensity values\n",
@@ -1329,77 +1327,33 @@
     "    return modified_z_scores\n",
     "    \n",
     "# The next function calculates the average values around the point to be replaced.\n",
-    "def fixer(y,ma):\n",
-    "    threshold = 7 # binarisation threshold\n",
-    "    \n",
+    "def fixer(y, ma, threshold):\n",
     "    spikes = abs(np.array(modified_z_score(y))) > threshold\n",
     "    y_out = y.copy()\n",
     "    for i in np.arange(len(spikes)):\n",
+    "        \n",
     "        if spikes[i] != 0:\n",
-    "            w = np.arange(i-ma,i+1+ma)\n",
-    "            we = w[spikes[w] == 0]\n",
-    "            if len(we) > 0:  # Check if it has at least one valid value\n",
-    "                y_out[i] = np.mean(y[we])\n",
+    "            # Calculate the window range, ensuring it stays within the bounds of the spectrum\n",
+    "            w_start = max(i - ma, 0)\n",
+    "            w_end = min(i + ma + 1, len(y))\n",
+    "            w = np.arange(w_start, w_end)\n",
+    "            \n",
+    "            valid_w = w[w < len(spikes)]  # Ensure w doesn't go beyond the length of spikes\n",
+    "            \n",
+    "            # Indices within the window that do not correspond to spikes\n",
+    "            valid_indices = valid_w[~spikes[valid_w]]\n",
+    "            \n",
+    "            # If there are valid indices, calculate the mean of 'y' over these indices\n",
+    "            if len(valid_indices) > 0:\n",
+    "                y_out[i] = np.mean(y[valid_indices])\n",
+    "            else:\n",
+    "                y_out[i] = y[i]\n",
     "    return y_out\n",
     "\n",
-    "def despike_group(absorbances):\n",
+    "def despike_group(absorbances, ma=20, threshold=7):\n",
     "    absorbance_data = absorbances.to_numpy()\n",
-    "    despiked_absorbance = fixer(absorbance_data, ma=20) # Tuned based on ml performance\n",
-    "    return(despiked_absorbance)\n",
-    "\n",
-    "df['Despiked_Absorbance'] = df.groupby('SpecID')['Absorbance'].transform(lambda x: despike_group(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 2048 is out of bounds for axis 0 with size 2048",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 28\u001b[0m\n\u001b[1;32m     25\u001b[0m     despiked_absorbance \u001b[38;5;241m=\u001b[39m fixer(absorbance_data, m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m) \u001b[38;5;66;03m# Tuned based on ml performance\u001b[39;00m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m(despiked_absorbance)\n\u001b[0;32m---> 28\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDespiked_Absorbance\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSpecID\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAbsorbance\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mdespike_group\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/groupby/generic.py:516\u001b[0m, in \u001b[0;36mSeriesGroupBy.transform\u001b[0;34m(self, func, engine, engine_kwargs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    513\u001b[0m \u001b[38;5;129m@Substitution\u001b[39m(klass\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSeries\u001b[39m\u001b[38;5;124m\"\u001b[39m, example\u001b[38;5;241m=\u001b[39m__examples_series_doc)\n\u001b[1;32m    514\u001b[0m \u001b[38;5;129m@Appender\u001b[39m(_transform_template)\n\u001b[1;32m    515\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtransform\u001b[39m(\u001b[38;5;28mself\u001b[39m, func, \u001b[38;5;241m*\u001b[39margs, engine\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, engine_kwargs\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m--> 516\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_transform\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    517\u001b[0m \u001b[43m        \u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mengine\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mengine_kwargs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mengine_kwargs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    518\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/groupby/groupby.py:1950\u001b[0m, in \u001b[0;36mGroupBy._transform\u001b[0;34m(self, func, engine, engine_kwargs, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1947\u001b[0m     warn_alias_replacement(\u001b[38;5;28mself\u001b[39m, orig_func, func)\n\u001b[1;32m   1949\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(func, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m-> 1950\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_transform_general\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mengine_kwargs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1952\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m func \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m base\u001b[38;5;241m.\u001b[39mtransform_kernel_allowlist:\n\u001b[1;32m   1953\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is not a valid function name for transform(name)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/groupby/generic.py:556\u001b[0m, in \u001b[0;36mSeriesGroupBy._transform_general\u001b[0;34m(self, func, engine, engine_kwargs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    551\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name, group \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrouper\u001b[38;5;241m.\u001b[39mget_iterator(\n\u001b[1;32m    552\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_selected_obj, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maxis\n\u001b[1;32m    553\u001b[0m ):\n\u001b[1;32m    554\u001b[0m     \u001b[38;5;66;03m# this setattr is needed for test_transform_lambda_with_datetimetz\u001b[39;00m\n\u001b[1;32m    555\u001b[0m     \u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__setattr__\u001b[39m(group, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m, name)\n\u001b[0;32m--> 556\u001b[0m     res \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgroup\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    558\u001b[0m     results\u001b[38;5;241m.\u001b[39mappend(klass(res, index\u001b[38;5;241m=\u001b[39mgroup\u001b[38;5;241m.\u001b[39mindex))\n\u001b[1;32m    560\u001b[0m \u001b[38;5;66;03m# check for empty \"results\" to avoid concat ValueError\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[17], line 28\u001b[0m, in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     25\u001b[0m     despiked_absorbance \u001b[38;5;241m=\u001b[39m fixer(absorbance_data, m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m) \u001b[38;5;66;03m# Tuned based on ml performance\u001b[39;00m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m(despiked_absorbance)\n\u001b[0;32m---> 28\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDespiked_Absorbance\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSpecID\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAbsorbance\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mtransform(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[43mdespike_group\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[0;32mIn[17], line 25\u001b[0m, in \u001b[0;36mdespike_group\u001b[0;34m(absorbances)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdespike_group\u001b[39m(absorbances):\n\u001b[1;32m     24\u001b[0m     absorbance_data \u001b[38;5;241m=\u001b[39m absorbances\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[0;32m---> 25\u001b[0m     despiked_absorbance \u001b[38;5;241m=\u001b[39m \u001b[43mfixer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mabsorbance_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# Tuned based on ml performance\u001b[39;00m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m(despiked_absorbance)\n",
-      "Cell \u001b[0;32mIn[17], line 20\u001b[0m, in \u001b[0;36mfixer\u001b[0;34m(y, m)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m spikes[i] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m: \u001b[38;5;66;03m# If we have an spike in position i\u001b[39;00m\n\u001b[1;32m     19\u001b[0m     w \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marange(i\u001b[38;5;241m-\u001b[39mm,i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m+\u001b[39mm) \u001b[38;5;66;03m# we select 2 m + 1 points around our spike\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m     w2 \u001b[38;5;241m=\u001b[39m w[\u001b[43mspikes\u001b[49m\u001b[43m[\u001b[49m\u001b[43mw\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m] \u001b[38;5;66;03m# From such interval, we choose the ones which are not spikes\u001b[39;00m\n\u001b[1;32m     21\u001b[0m     y_out[i] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(y[w2])\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 2048 is out of bounds for axis 0 with size 2048"
-     ]
-    }
-   ],
-   "source": [
-    "# https://towardsdatascience.com/removing-spikes-from-raman-spectra-8a9fdda0ac22\n",
-    "\n",
-    "def modified_z_score(intensity):\n",
-    "    median_int = np.median(intensity)\n",
-    "    mad_int = np.median([np.abs(intensity - median_int)])\n",
-    "    modified_z_scores = 0.6745 * (intensity - median_int) / mad_int\n",
-    "    return modified_z_scores\n",
-    "    \n",
-    "# The next function calculates the average values around the point to be replaced.\n",
-    "def fixer(y,m):\n",
-    "    threshold = 7 # binarization threshold.\n",
-    "    threshold = 3.5 # binarization threshold. \n",
-    "\n",
-    "    spikes = abs(np.array(modified_z_score(np.diff(y)))) > threshold\n",
-    "    y_out = y.copy() # So we don’t overwrite y \n",
-    "\n",
-    "    for i in np.arange(len(spikes)):\n",
-    "        if spikes[i] != 0: # If we have an spike in position i\n",
-    "            w = np.arange(i-m,i+1+m) # we select 2 m + 1 points around our spike\n",
-    "            w2 = w[spikes[w] == 0] # From such interval, we choose the ones which are not spikes\n",
-    "            y_out[i] = np.mean(y[w2]) # and we average their values\n",
-    "\n",
-    "def despike_group(absorbances):\n",
-    "    absorbance_data = absorbances.to_numpy()\n",
-    "    despiked_absorbance = fixer(absorbance_data, m=20) # Tuned based on ml performance\n",
-    "    return(despiked_absorbance)\n",
+    "    despiked_absorbance = fixer(absorbance_data, ma=ma, threshold=threshold)\n",
+    "    return despiked_absorbance\n",
     "\n",
     "df['Despiked_Absorbance'] = df.groupby('SpecID')['Absorbance'].transform(lambda x: despike_group(x))"
    ]
