--- a/GroupKFold_Baseline_Approach/GroupKFold_Feature_Importance.ipynb
+++ b/GroupKFold_Baseline_Approach/GroupKFold_Feature_Importance.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This version uses GroupKFold instead."
+    "This version uses GroupKFold to better evalutate the models generalisation ability."
    ]
   },
   {
@@ -1330,6 +1330,13 @@
     "# # Show the plot\n",
     "# plt.tight_layout()\n",
     "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
