--- a/GroupKFold_Baseline_Approach/GroupKFold_Spectra+Peak_Features.ipynb
+++ b/GroupKFold_Baseline_Approach/GroupKFold_Spectra+Peak_Features.ipynb
@@ -31,7 +31,9 @@
     "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_validate, GridSearchCV\n",
     "from joblib import Parallel, delayed\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from Spectra_Preparation_Functions import *"
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Cleaning_and_Evaluation import *"
    ]
   },
   {
@@ -318,13 +320,6 @@
    "metadata": {},
    "source": [
     "As you can see, it does not properly find the peaks, so we have to tune the peak finding parameters."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "These parameters are based on Thomas Keogh's Search"
    ]
   },
   {
