--- a/GroupKFold_Baseline_Approach/Move to archive/SVC_and_Spectra_Cleaning_Demo.ipynb
+++ b/GroupKFold_Baseline_Approach/Move to archive/SVC_and_Spectra_Cleaning_Demo.ipynb
@@ -22,7 +22,9 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from mlxtend.feature_selection import SequentialFeatureSelector\n",
-    "from Spectra_Preparation_Functions import *"
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Cleaning_and_Evaluation import *"
    ]
   },
   {
